# SFMLChess

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
.cache/clangd/index/: API_Layer.hpp.13929BD9D1667A60.idx  Application.cpp.432133E7F6844C37.idx  Application.hpp.E8F5596C00849FA1.idx  Board.cpp.22DB96D892D84C3E.idx  ChessBoardRenderer.cpp.C9447FEFC0F0BD64.idx  ChessBoardRenderer.hpp.CC45819FC227ABC4.idx  GameRules.cpp.8DB1132356C5AD46.idx  GameState.cpp.6398B304687CCB7E.idx  MenuState.cpp.1D0FB353E13FAB76.idx  Piece.cpp.02092DB5E3F77098.idx  Piece.hpp.578A0840EA4D9228.idx  PieceSprite.cpp.EA3A4EACD7725D97.idx  ResourceHolder.hpp.BACBDF72E09994BC.idx  ResourceHolder.inl.1EB3FF8393A5ABBF.idx  ResourceID.hpp.1FA2024D8FDB9DE0.idx  State.cpp.8E0A8410010A4C4E.idx  UIElements.cpp.E4A59AB05A91986E.idx  Utils.cpp.D61B6D4BCB8E00FD.idx  Utils.hpp.EB1044DC59621258.idx  Utils.inl.3CD54AEF6077AF62.idx  main.cpp.F1AB0F8F288C67E9.idx
source/: main.cpp
source/Game/: Game.hpp
src/: main.cpp
src/Chess/: Board.hpp  Piece.cpp  Piece.hpp  Utils.hpp  Utils.inl
src/Core/: API_Layer.hpp  Application.cpp  Application.hpp  Context.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceID.hpp  State.hpp  StateStack.hpp
src/Graphics/: ChessBoardRenderer.cpp  ChessBoardRenderer.hpp  MenuRenderer.cpp  MenuRenderer.hpp  PieceSprite.hpp
src/States/: GameState.cpp  GameState.hpp  MenuState.cpp  MenuState.hpp
